--- a/pyproject.toml
+++ b/pyproject.toml
@@ -6,8 +6,10 @@ authors = [
     {name = "Javier Smith"}
 ]
 readme = "README.md"
-requires-python = ">=3.13"
+requires-python = ">=3.13,<4.0"
 dependencies = [
+    "langchain[openai] (>=0.3.21,<0.4.0)",
+    "python-dotenv (>=1.0.1,<2.0.0)"
 ]
 
 
